--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Employee
+﻿@model EMPMANA.ViewModels.CreateEmployeeViewModel
 
 
 @{
     ViewBag.Title = "Create";
 }
-<form asp-controller="home" asp-action="Create" method="post" class="mt-3">
+<form enctype="multipart/form-data" asp-controller="home" asp-action="Create" method="post" class="mt-3">
     <div>
         <div class="card">
             <div class="card-header" style="max-height: 45px;border-radius: 5px;background-color:#0f4c8ae3 !important">
@@ -35,6 +35,17 @@
                     <input asp-for="Contact" class="col-sm-10 form-control" />
                 </div>
 
+                <div class="form-groups row m-1">
+                    <div class="col-sm-2">
+                        <label asp-for="photopath" class=" col-form-label custom-form-label">Photo-Path</label>
+
+                    </div>
+                    <div class="col-sm-10 custom-file">
+                        <input asp-for="photopath" class=" form-control custom-file-input" />
+                        <label class="custom-file-label">Choose File ..</label>
+                    </div>
+                </div>
+
                 <div class="form-groups row float-right">
                     <button type="submit" class="btn btn-success mr-3 mt-1">Create</button>
                 </div>
@@ -46,3 +57,16 @@
         </div>
     </div>
 </form>
+
+@section Scripts{ 
+    <script>
+        $(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var filename = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(filename);
+
+            });
+
+        });
+    </script>
+}
