--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
               asp-fallback-test-property="position"
               asp-fallback-test-value="absolute">
     </environment>
-    <link href="~/Css/Custom.css" rel="stylesheet" />
+   
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
 
@@ -46,6 +46,11 @@
         <div class="container">
             @RenderBody()
         </div>
+
+        @if (IsSectionDefined("Scripts"))
+        {
+            @RenderSection("Scripts", required: true);
+        }
     </div>
 </body>
 </html>
