--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
               asp-fallback-test-property="position"
               asp-fallback-test-value="absolute">
     </environment>
-   
+
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
 
@@ -39,6 +39,11 @@
                     </li>
                     <li class="nav-item">
                         <a asp-controller="home" asp-action="Create" class="nav-link">Create</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a asp-controller="account" asp-action="register" class="nav-link">Register</a>
                     </li>
                 </ul>
             </div>
