--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -15,28 +15,36 @@
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-    <div class="container ">
+    <div class="container" style="margin-top:300px">
         <form method="post" asp-controller="Account" asp-action="login">
-            <div class="clearfix m-3">
-                <div class="col-sm-6 m-auto " style="top:200px">
-                    <div class=" row form-group">
-                        <label asp-for="Email" class="col-sm-2 col-form-label"></label>
-                        <input asp-for="Email" class="col-sm-10 form-control" />
-                    </div>
-                    <div class=" row form-group">
-                        <label asp-for="Password" class="col-sm-2 col-form-label"></label>
-                        <input asp-for="Password" class="col-sm-10 form-control" />
-                    </div>
-                    <div class="row form-group">
-                        <button type="submit" class="btn btn-success" style="border-radius: 20px;width: 80%;margin-left:15%;">SIGN IN</button>
-                    </div>
-                    <div asp-validation-summary="All" class="text-danger">
+            <div class="col-sm-6 m-auto" >
+                <div class=" row form-group">
+                    <label asp-for="Email" class="col-sm-4 col-form-label"></label>
+                    <input asp-for="Email" class="col-sm-8 form-control" />
+                </div>
+                <div class=" row form-group">
+                    <label asp-for="Password" class="col-sm-4 col-form-label"></label>
+                    <input asp-for="Password" class="col-sm-8 form-control" />
+                </div>
+                <div class="row m-1 ">
+                    
+                    <input asp-for="Rememberme" class="col-sm-3" style="min-height: 50px;max-width: 25px;" />
+                    <label asp-for="Rememberme" class="col-sm-8 col-form-label-lg ">
+                        @Html.DisplayNameFor(m => m.Rememberme)
+                    </label>
+                </div>
+
+                <div class="row ">
+                    <div class="col-sm-12" style="padding:5px;margin-left:60px;">
+                        <button type="submit" class=" btn btn-success" style="border-radius: 20px; width:40%;">SIGN IN</button>
+                        <button type="submit" class="  btn btn-info " style="border-radius: 20px;width:40%;" asp-controller="Account" asp-action="Register" formmethod="get">Register</button>
                     </div>
                 </div>
-               
+
+                <div asp-validation-summary="All" class="text-danger">
+                </div>
             </div>
         </form>
-      
     </div>
 </body>
 </html>
