--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+@inject SignInManager<IdentityUser> signInManager
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -33,19 +35,27 @@
                 </span>
             </button>
             <div class="collapse navbar-collapse" id="collapsenav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Index" class="nav-link">List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Create" class="nav-link">Create</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a asp-controller="account" asp-action="register" class="nav-link">Register</a>
-                    </li>
-                </ul>
+                @if (signInManager.IsSignedIn(User))
+                {
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Index" class="nav-link">List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="home" asp-action="Create" class="nav-link">Create</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <form method="post" asp-controller="Account" asp-action="Logout">
+                                <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">SignOut (@User.Identity.Name)</button>
+                            </form>
+                        </li>
+
+
+                    </ul>
+                }
             </div>
         </div>
         <div class="container">
